# SLiCEs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
examples/: benchmark_parallel_vs_recurrent.py  language_disambiguation.py  language_selfsupervised.py  language_selfsupervised_plotting.py  language_unsupervised.py  language_unsupervised_plotting.py
pyslice/: LICENSE  README.md  pyproject.toml
slices/: pyproject.toml
slices/src/slices/: __init__.py
src/slices/: __init__.py  slices.py
tests/: test_import.py  test_slices.py
