[project]
name = "slices-mono-repo"
version = "0.1.0"
description = "Development workspace for SLiCEs - Structured Linear CDE layers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Benjamin Walker", email = "mail@benwalker.co.uk"}
]

dependencies = [
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[tool.uv.sources]
slices = { path = "slices", editable = true }

[tool.uv.workspace]
members = ["slices"]

[tool.hatch.build.targets.wheel]
packages = ["slices/src/slices"]
